# terra

./: meson.build
res/shaders/: chunk-fragment.glsl  generic-vertex.glsl  light-apply-fragment.glsl  light-apply-vertex.glsl  light-render-fragment.glsl  light-render-vertex.glsl
src/: subproject_impls.cpp
src/client/: main.cpp
src/client/opengl/: buffer.hpp  debug.hpp  framebuffer.hpp  init.hpp  mesh.hpp  shader.hpp  texture.hpp  vao.hpp
src/client/render/: chunk_view.cpp  chunk_view.hpp  vertex.hpp  window.cpp  window.hpp  world_view.hpp
src/client/world/: client_tile_registry.hpp
src/world/: chunk.hpp  light.cpp  tile.hpp  tile_ids.hpp  world.hpp
